# applause-template

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: ApplauseTemplateEditor.cpp  ApplauseTemplateEditor.h  ApplauseTemplatePlugin.cpp  ApplauseTemplatePlugin.h
